Передача переменных в шаблон

--- a/templates/example.html
+++ b/templates/example.html
@@ -15,7 +15,7 @@
     </main>
 
     <footer>
-        &copy; {{ name }}, ФБИ-33, 3 курс, 2025
+        &copy; {{ name }}, {{ group }}, {{ cours }} курс, {{ year }}
     </footer>
 </body>
 </html>
