--- a/templates/example.html
+++ b/templates/example.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ирина Андреева. Лабораторная работа 2</title>
+    <title>{{ name }}. Лабораторная работа {{ lab_number }}</title>
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа 2
+        WEB-программирование, часть 2. Лабораторная работа {{ lab_number }}
     </header>
 
     <main>
-        основной контент
+        5 + 2 = {{ 5 + 2 }}<br>
+        11 * 28 = {{ 11 * 28 }}<br>
+        3258 - 759 = {{ 3258 - 759 }}<br>
+        8452 / 793 = {{ 8452 / 793 }}<br>
+        45<sup>8</sup> = {{ 45**8}}<br>
     </main>
 
     <footer>
