--- a/templates/example.html
+++ b/templates/example.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ name }}. Лабораторная работа {{ lab_number }}</title>
+    <title>{% if name %}Ирина Андреева{% endif %}. Лабораторная работа {{ lab_number }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа {{ lab_number }}
+        WEB-программирование, часть 2. {% if lab_number %}Лабораторная работа 2 {% endif %}
     </header>
 
     <main>
@@ -20,7 +20,26 @@
     </main>
 
     <footer>
-        &copy; {{ name }}, {{ group }}, {{ cours }} курс, {{ year }}
+        &copy;
+        {% if name %}
+            {{ name }},
+        {% else %}
+            Анонимус,
+        {% endif %}
+
+        {% if group %}
+            {{ group }},
+        {% else %}
+            Нет данных,
+        {% endif %}
+
+        {% if course %}
+            {{ course }},
+        {% else %}
+            В отпуске,
+        {% endif %}
+        
+        2025
     </footer>
 </body>
 </html>
