--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -11,5 +11,37 @@
             <li>
                 <a href="/lab2/example">example</a>
             </li>
+            <li>
+                <a href="/lab2/filters">filters</a>
+            </li>
+
+            <li>
+                <a href="/lab2/all_flowers">all_flowers</a>
+            </li>
+
+            <li>
+                <a href="/lab2/flowers/<int:flower_id>">flower</a>
+            </li>
+
+            <li>
+                <a href="/lab2/add_flower">add_flower</a>
+            </li>
+
+            <li>
+                <a href="/lab2/clear_flowers">clear_flowers</a>
+            </li>
+
+            <li><a href="/lab2/books">books</a>
+            </li>
+
+            <li>
+                <a href="/lab2/objects">objects</a>
+            </li>
+
+            <li>
+                <a href="/lab2/calc/">calc</a>
+            </li>
+
+            
         </ol>
 {% endblock %}
