--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. {{ self.lab() }}
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div>
+                WEB-программирование, часть 2. {{ self.lab() }}
+            </div>
+            <nav>
+                <a href="/" style="text-decoration: none; font-weight: bold; color: #c1da77;">
+                    Главное меню
+                </a>
+            </nav>
+        </div>
     </header>
 
     <main>
