--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ирина Андреева. {% block lab %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+
+    <!-- Фавиконки -->
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
     <header>
@@ -13,7 +18,7 @@
                 WEB-программирование, часть 2. {{ self.lab() }}
             </div>
             <nav>
-                <a href="/" style="text-decoration: none; font-weight: bold; color: #c1da77;">
+                <a href="{{ url_for('index') }}" style="text-decoration: none; font-weight: bold; color: #0066cc;">
                     Главное меню
                 </a>
             </nav>
