--- a/templates/add_flower.html
+++ b/templates/add_flower.html
@@ -1,10 +1,9 @@
-<!doctype html>
-<html>
-<head><meta charset="utf-8"><title>Добавлен цветок</title></head>
-<body>
-    <h1>Добавлен новый цветок</h1>
-    <p>Название нового цветка: <b>{{ name }}</b></p>
-    <p>Всего цветов: {{ count }}</p>
-    <p><a href="/lab2/all_flowers/">Посмотреть все цветы</a></p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block main %}
+<h1>Добавлен новый цветок</h1>
+<p>Название: <b>{{ name }}</b></p>
+<p>Цена: {{ price }} руб.</p>
+<p>Всего цветов теперь: {{ count }}</p>
+<p><a href="{{ url_for('all_flowers') }}">Вернуться к списку</a></p>
+{% endblock %}
