--- a/templates/flower.html
+++ b/templates/flower.html
@@ -1,9 +1,8 @@
-<!doctype html>
-<html>
-<head><meta charset="utf-8"><title>Цветок</title></head>
-<body>
-    <h1>Информация о цветке</h1>
-    <p>Цветок №{{ idx }}: <b>{{ name }}</b></p>
-    <p><a href="{{ url_for('all_flowers') }}">Посмотреть все цветы</a></p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block main %}
+<h1>Информация о цветке</h1>
+<p>Цветок №{{ idx + 1 }}: <b>{{ flower.name }}</b></p>
+<p>Цена: {{ flower.price }} руб.</p>
+<p><a href="{{ url_for('all_flowers') }}">Посмотреть все цветы</a></p>
+{% endblock %}
