--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -17,7 +17,10 @@
 
             <li>
                 <a href="/lab3/del_cookie">Очистка кук</a>
+            </li>
 
+            <li>
+                <a href="/lab3/form1">Форма</a>
             </li>
         </ol>
 {% endblock %}
