--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -31,5 +31,9 @@
             <li>
                 <a href="/lab3/form1">Форма</a>
             </li>
+
+            <li>
+                <a href="/lab3/order">Заказ</a>
+            </li>
         </ol>
 {% endblock %}
