--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -35,5 +35,9 @@
             <li>
                 <a href="/lab3/order">Заказ</a>
             </li>
+
+            <li>
+                <a href="/lab3/settings">Цвет текста</a>
+            </li>
         </ol>
 {% endblock %}
