--- a/templates/lab2/add_flower.html
+++ b/templates/lab2/add_flower.html
@@ -5,5 +5,5 @@
 <p>Название: <b>{{ name }}</b></p>
 <p>Цена: {{ price }} руб.</p>
 <p>Всего цветов теперь: {{ count }}</p>
-<p><a href="{{ url_for('all_flowers') }}">Вернуться к списку</a></p>
+<p><a href="{{ url_for('/lab2/all_flowers') }}">Вернуться к списку</a></p>
 {% endblock %}
