--- a/templates/lab2/example.html
+++ b/templates/lab2/example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if name %}Ирина Андреева{% endif %}. Лабораторная работа {{ lab_number }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/lab2/main.css') }}">
 </head>
 <body>
     <header>
