--- a/templates/lab2/flower.html
+++ b/templates/lab2/flower.html
@@ -4,5 +4,5 @@
 <h1>Информация о цветке</h1>
 <p>Цветок №{{ idx + 1 }}: <b>{{ flower.name }}</b></p>
 <p>Цена: {{ flower.price }} руб.</p>
-<p><a href="{{ url_for('all_flowers') }}">Посмотреть все цветы</a></p>
+<p><a href="{{ url_for('lab2.all_flowers') }}">Посмотреть все цветы</a></p>
 {% endblock %}
