--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -42,5 +42,9 @@
             <li>
                 <a href="/lab3/settings">Цвет текста</a>
             </li>
+
+            <li>
+                <a href="/lab3/train_ticket">Железнодорожный билет</a>
+            </li>
         </ol>
 {% endblock %}
