--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -47,5 +47,8 @@
                 <a href="/lab3/train_ticket">Железнодорожный билет</a>
             </li>
 
+            <li>
+                <a href="/lab3/products">Товары</a>
+            </li>
         </ol>
 {% endblock %}
