--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -8,8 +8,25 @@
     <h1>Формы (POST)</h1>
     <div>Тема лабораторной - Формы (POST). Список сделанных страниц: </div>
         <ol>
+            <h2>Арифметические операции</h2>
             <li>
                 <a href="/lab4/div-form">Деление</a>
+            </li>
+
+            <li>
+                <a href="/lab4/sum-form">Суммирование</a>
+            </li>
+
+            <li>
+                <a href="/lab4/mult-form">Умножение</a>
+            </li>
+
+            <li>
+                <a href="/lab4/sub-form">Вычитание</a>
+            </li>
+
+            <li>
+                <a href="/lab4/pow-form">Возведение в степень</a>
             </li>
         </ol>
 {% endblock %}
