--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -28,5 +28,9 @@
             <li>
                 <a href="/lab4/pow-form">Возведение в степень</a>
             </li>
+
+            <li>
+                <a href="/lab4/tree">Деревья</a>
+            </li>
         </ol>
 {% endblock %}
