--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -32,5 +32,9 @@
             <li>
                 <a href="/lab4/tree">Деревья</a>
             </li>
+
+            <li>
+                <a href="/lab4/login">Форма авторизации</a>
+            </li>
         </ol>
 {% endblock %}
