--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -36,5 +36,9 @@
             <li>
                 <a href="/lab4/login">Форма авторизации</a>
             </li>
+
+            <li>
+                <a href="/lab4/fridge">Холодильник</a>
+            </li>
         </ol>
 {% endblock %}
