--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -40,5 +40,9 @@
             <li>
                 <a href="/lab4/fridge">Холодильник</a>
             </li>
+
+            <li>
+                <a href="/lab4/grain">Заказ зерна</a>
+            </li>
         </ol>
 {% endblock %}
