--- a/templates/lab5/edit_article.html
+++ b/templates/lab5/edit_article.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='lab5/lab5.css') }}">
 
 <div class="lab5-container">
-    <h1>Создание статьи</h1>
+    <h1>Редактирование статьи</h1>
 
     {% if error %}
         <div class="error-message">{{ error }}</div>
@@ -16,19 +16,19 @@
         <div class="form-group">
             <label>
                 Название статьи:
-                <input type="text" name="title" maxlength="50" required>
+                <input type="text" name="title" value="{{ article['title'] }}" maxlength="50" required>
             </label>
         </div>
 
         <div class="form-group">
             <label>
                 Текст статьи:
-                <textarea name="article_text" required></textarea>
+                <textarea name="article_text" required>{{ article['article_text'] }}</textarea>
             </label>
         </div>
 
         <div class="form-actions">
-            <button type="submit" class="btn">Готово</button>
+            <button type="submit" class="btn">Сохранить изменения</button>
             <a href="{{ url_for('lab5.list_articles') }}" class="btn btn-secondary">Отмена</a>
         </div>
     </form>
