--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -12,12 +12,16 @@
 
     <nav class="lab5-nav-card">
         <div class="lab5-nav-links">
-            <a href="{{ url_for('lab5.login') }}">Войти</a>
-            <a href="{{ url_for('lab5.register') }}">Регистрация</a>
-            <a href="{{ url_for('lab5.list_articles') }}">Список статей</a>
-            <a href="{{ url_for('lab5.create_article') }}">Создать статью</a>
+            {% if login %}
+                <a href="{{ url_for('lab5.list_articles') }}">Мои статьи</a>
+                <a href="{{ url_for('lab5.create_article') }}">Создать статью</a>
+                <a href="{{ url_for('lab5.logout') }}" class="logout-btn">Выйти</a>
+            {% else %}
+                <a href="{{ url_for('lab5.login') }}">Войти</a>
+                <a href="{{ url_for('lab5.register') }}">Регистрация</a>
+            {% endif %}
         </div>
-         <div class="lab5-username">
+        <div class="lab5-username">
             {% if login %}
                 {{ login }}
             {% else %}
