--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -6,19 +6,25 @@
     <h1>Регистрация</h1>
 
     {% if error %}
-        <div style="color: rgb(97, 18, 18); margin-bottom: 15px;">{{ error }}</div>
+        <div style="color: red; margin-bottom: 15px;">{{ error }}</div>
     {% endif %}
 
     <form action="/lab5/register" method="post">
         <div>
             <label>
-                Логин: <input type="text" name="login">
+                Логин: <input type="text" name="login" required>
             </label>
         </div>
 
         <div>
             <label>
-                Пароль: <input type="password" name="password">
+                Полное имя: <input type="text" name="full_name" required>
+            </label>
+        </div>
+
+        <div>
+            <label>
+                Пароль: <input type="password" name="password" required>
             </label>
         </div>
         <button type="submit">Зарегистрироваться</button>
