--- a/templates/lab5/create_article.html
+++ b/templates/lab5/create_article.html
@@ -27,8 +27,22 @@
             </label>
         </div>
 
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="is_favorite">
+                Добавить в избранное
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="is_public">
+                Сделать публичной
+            </label>
+        </div>
+
         <div class="form-actions">
-            <button type="submit" class="btn">Готово</button>
+            <button type="submit" class="btn">Создать статью</button>
             <a href="{{ url_for('lab5.list_articles') }}" class="btn btn-secondary">Отмена</a>
         </div>
     </form>
