--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -13,19 +13,23 @@
     <nav class="lab5-nav-card">
         <div class="lab5-nav-links">
             {% if login %}
-                <a href="{{ url_for('lab5.list_articles') }}">Мои статьи</a>
+                <a href="{{ url_for('lab5.list_articles') }}">Статьи</a>
                 <a href="{{ url_for('lab5.create_article') }}">Создать статью</a>
+                <a href="{{ url_for('lab5.profile') }}">Профиль</a>
+                <a href="{{ url_for('lab5.users_list') }}">Пользователи</a>
                 <a href="{{ url_for('lab5.logout') }}" class="logout-btn">Выйти</a>
             {% else %}
+                <a href="{{ url_for('lab5.list_articles') }}">Публичные статьи</a>
                 <a href="{{ url_for('lab5.login') }}">Войти</a>
                 <a href="{{ url_for('lab5.register') }}">Регистрация</a>
+                <a href="{{ url_for('lab5.users_list') }}">Пользователи</a>
             {% endif %}
         </div>
         <div class="lab5-username">
             {% if login %}
                 {{ login }}
             {% else %}
-                Anonymous
+                Гость
             {% endif %}
         </div>
     </nav>
