--- a/templates/lab6/lab6.html
+++ b/templates/lab6/lab6.html
@@ -2,6 +2,98 @@
 
 {% block lab %}Лабораторная работа 6{% endblock %}
 
-{% block main %}
+{% block script %}
+<script>
+    function getOfficeList() {
+        const url = '/lab6/json-rpc-api/';
+        const json = {
+            'jsonrpc': '2.0',
+            'method': 'info',
+            'id': Math.round(Math.random()*1000)
+        };
 
+        fetch(url, {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(json)
+        })
+        .then(function(response) {
+            return response.json()
+        })
+        .then(function(data) {
+            const office_list = data.result;
+            const ul = document.getElementById('office-list');
+            ul.innerHTML = '';
+
+            for(let i = 0; i < office_list.length; i++) {
+                const office = office_list[i];
+                const li = document.createElement('li');
+                li.innerText = `${office.number}: ${office.tenant || 'свободен'}`;
+
+                if (!office.tenant) {
+                    const bookingButton = document.createElement('button');
+                    bookingButton.innerText = 'зарезервировать';
+                    bookingButton.onclick = function() { booking(office.number) };
+                    li.appendChild(bookingButton);
+                }
+
+                ul.appendChild(li);
+            }
+        })
+        .catch(function(error) {
+            console.error('Ошибка загрузки офисов:', error);
+            const ul = document.getElementById('office-list');
+            ul.innerHTML = '<li style="color: red;">Не удалось загрузить данные</li>';
+        });
+    }
+
+    function booking(officeNumber) {
+        const url = '/lab6/json-rpc-api/';
+        const json = {
+            'jsonrpc': '2.0',
+            'method': 'booking',
+            'params': officeNumber,
+            'id': Math.round(Math.random()*1000)
+        };
+
+        fetch(url, {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(json)
+        })
+        .then(function(response) {
+            return response.json()
+        })
+        .then(function(data) {
+            if(data.error) {
+                switch(data.error.code) {
+                    case 1:
+                        alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
+                        break;
+                    case 2:
+                        alert('Офис уже арендуется');
+                        break;
+                    case -32601:
+                        alert('Странная ошибка');
+                        break;
+                }
+            }
+            else {
+                document.getElementById('office-list').innerHTML = '';
+                getOfficeList();
+            }
+        })
+        .catch(function(error) {
+            console.error('Ошибка бронирования:', error);
+            alert('Произошла ошибка при бронировании.');
+        });
+    }
+
+    document.addEventListener('DOMContentLoaded', getOfficeList);
+</script>
+{% endblock %}
+
+{% block main %}
+    <h1>Список кабинетов</h1>
+    <ul id="office-list"></ul>
 {% endblock %}
