--- a/templates/lab6/lab6.html
+++ b/templates/lab6/lab6.html
@@ -4,6 +4,7 @@
 
 {% block script %}
 <script>
+    const CURRENT_USER = "{{ session.get('login', '') }}";
     function getOfficeList() {
         const url = '/lab6/json-rpc-api/';
         const json = {
@@ -35,6 +36,13 @@
                     bookingButton.innerText = 'зарезервировать';
                     bookingButton.onclick = function() { booking(office.number) };
                     li.appendChild(bookingButton);
+                }
+
+                else if (office.tenant === CURRENT_USER) {
+                    const releaseButton = document.createElement('button');
+                    releaseButton.innerText = 'освободить';
+                    releaseButton.onclick = function() { cancellation(office.number) };
+                    li.appendChild(releaseButton);
                 }
 
                 ul.appendChild(li);
@@ -86,6 +94,51 @@
         .catch(function(error) {
             console.error('Ошибка бронирования:', error);
             alert('Произошла ошибка при бронировании.');
+        });
+    }
+
+     function cancellation(officeNumber) {
+        const url = '/lab6/json-rpc-api/';
+        const json = {
+            'jsonrpc': '2.0',
+            'method': 'cancellation',
+            'params': officeNumber,
+            'id': Math.round(Math.random()*1000)
+        };
+
+        fetch(url, {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(json)
+        })
+        .then(function(response) {
+            return response.json()
+        })
+        .then(function(data) {
+            if(data.error) {
+                switch(data.error.code) {
+                    case 1:
+                        alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
+                        break;
+                    case 3:
+                        alert('Офис не арендован');
+                        break;
+                    case 4:
+                        alert('Нельзя снять чужую аренду');
+                        break;
+                    case -32601:
+                        alert('Странная ошибка');
+                        break;
+                }
+            }
+            else {
+                document.getElementById('office-list').innerHTML = '';
+                getOfficeList();
+            }
+        })
+        .catch(function(error) {
+            console.error('Ошибка снятия аренды:', error);
+            alert('Произошла ошибка при снятии аренды.');
         });
     }
 
