--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -16,7 +16,7 @@
     th {
         background-color: #f8f9fa;
         padding: 12px 15px;
-        text-align: left;
+        text-align: center;
         border-bottom: 2px solid #dee2e6;
         font-weight: 600;
     }
@@ -32,7 +32,7 @@
 
     /* Стили для кнопок */
     button {
-        padding: 8px 16px;
+        padding: 8px ;
         margin: 5px;
         border: none;
         border-radius: 4px;
