--- a/templates/lab8/login.html
+++ b/templates/lab8/login.html
@@ -20,6 +20,12 @@
                 Пароль: <input type="password" name="password">
             </label>
         </div>
+        <div>
+            <label>
+                <!-- ГАЛОЧКА "ЗАПОМНИТЬ МЕНЯ" -->
+                <input type="checkbox" name="remember"> Запомнить меня
+            </label>
+        </div>
         <button type="submit">Вход</button>
     </form>
 {% endblock %}
