--- a/templates/lab8/edit_article.html
+++ b/templates/lab8/edit_article.html
@@ -9,21 +9,29 @@
         </div>
     {% endif %}
 
-    <form method="post">
+    <form action="/lab8/articles/{{ article.id }}/edit/" method="post">
         <div>
             <label>
                 Заголовок: <br>
-                <input type="text" name="title" value="{{ article.title }}">
+                <input type="text" name="title" style="width: 300px;" value="{{ article.title }}">
             </label>
         </div>
         <div>
             <label>
                 Текст статьи: <br>
-                <textarea name="article_text" rows="10">{{ article.article_text }}</textarea>
+                <textarea name="article_text" rows="10" style="width: 500px;">{{ article.article_text }}</textarea>
             </label>
         </div>
-        <button type="submit">Сохранить изменения</button>
+        <div>
+            <label>
+                <input type="checkbox" name="is_public" {% if article.is_public %}checked{% endif %}>
+                Сделать статью публичной
+            </label>
+            <p><small>Публичные статьи видны всем пользователям, даже неавторизованным</small></p>
+        </div>
+        <div>
+            <button type="submit">Сохранить изменения</button>
+            <a href="/lab8/articles/" style="margin-left: 20px;">Отмена</a>
+        </div>
     </form>
-
-    <p><a href="/lab8/articles/">Вернуться к списку статей</a></p>
 {% endblock %}
